# zen-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  pyproject.toml  requirements.txt  run.py  start.sh
.github/workflows/: ci.yml
cli/: main.py
core/: agent.py  composio_client.py  llm_client.py
server/: main.py
server/static/: index.html
tests/: conftest.py  stress_test.py  test_agent.py  test_composio_client.py  test_llm_client.py  test_server.py
