[project]
name = "zen-agent"
version = "3.0.0"
description = "AI agent with 23,790+ tools via Composio, powered by OpenCode AI"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --timeout=60"

[tool.coverage.run]
source = ["core", "cli", "server"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
